--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,6 @@ apply plugin: 'maven-publish'
 apply plugin: 'spring-boot'
 apply plugin: 'org.grails.grails-plugin'
 
-apply from: 'https://raw.githubusercontent.com/grails/grails-profile-repository/master/profiles/plugin/templates/grailsCentralPublishing.gradle'
-apply from: 'https://raw.githubusercontent.com/grails/grails-profile-repository/master/profiles/plugin/templates/bintrayPublishing.gradle'
-
 ext {
 	grailsVersion = project.grailsVersion
 	gradleWrapperVersion = project.gradleWrapperVersion
@@ -57,4 +54,45 @@ dependencies {
 
 task wrapper(type: Wrapper) {
 	gradleVersion = gradleWrapperVersion
+}
+
+bintray {
+    user = System.getenv("BINTRAY_USER")
+    key = System.getenv("BINTRAY_KEY")
+    publications = ['maven']
+    publish = true
+    pkg {
+        repo = 'plugins'
+        userOrg = 'grails'
+        name = "$project.name"
+        licenses = ['Apache-2.0']
+        desc = 'Grails LDAP Server Plugin'
+        websiteUrl = 'https://github.com/bobbywarner/grails-ldap-server'
+        issueTrackerUrl = 'https://github.com/bobbywarner/grails-ldap-server/issues'
+        vcsUrl = 'https://github.com/bobbywarner/grails-ldap-server'
+        publicDownloadNumbers = true
+    }
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            pom.withXml {
+                def pomNode = asNode()
+                pomNode.dependencyManagement.replaceNode {}
+                pomNode.dependencies.dependency.findAll {
+                    it.version.text().isEmpty()
+                }.each {
+                    it.replaceNode {}
+                }
+            }
+            artifactId project.name
+            from components.java
+            artifact sourcesJar
+            artifact javadocJar
+            artifact source:"${sourceSets.main.output.classesDir}/META-INF/grails-plugin.xml",
+                     classifier:"plugin",
+                     extension:'xml'
+        }
+    }
 }
